# HiveLord

./: .env.example  .gitignore  BLUESKY_TROUBLESHOOTING.md  README.md  check_config.py  check_errors.py  pyproject.toml  run_ui.py  test_schema.py
Workbook/AI/: BRAIN_INTEGRATION.md  CURSOR_BOOTSTRAP.md
Workbook/Human/: HUMAN_SETUP.md
app/: __init__.py  main.py
app/ai/: __init__.py  audit.py  contracts.py  dom_bot.py  prompt.py  tool_handlers.py  tools.py
app/config/: settings.py
app/core/: consent.py  logger.py  scheduler.py
app/ingest/: bluesky_client.py  instagram_client.py  lovense_client.py
app/outputs/: discord_client.py  telegram_client.py
app/storage/: db.py  models.py
app/ui/: __init__.py  server.py
app/ui/templates/: index.html
